5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1758_672.log
== TEST (2019-05-23 10:13:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = array(eval(input("insira n nigga:"))

v0 = ones(n, dtype = int)

print(v0)


-- ERROR:
File "XXXX", line 5
    v0 = ones(n, dtype = int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:14:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = array(eval(input("insira n nigga:"))

vo = ones(n, dtype = int)

print(vo)


-- ERROR:
File "XXXX", line 5
    vo = ones(n, dtype = int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:14:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = array(eval(input("insira n nigga:"))

vo = ones(n, dtype = int)

print(vo)


-- ERROR:
File "XXXX", line 5
    vo = ones(n, dtype = int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:14:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = array(eval(input("insira n nigga:"))

v = ones(n, dtype = int)

print(vo)


-- ERROR:
File "XXXX", line 5
    v = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:14:59) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = array(eval(input("insira n nigga:"))

V = ones(n, dtype = int)

print(vo)


-- ERROR:
File "XXXX", line 5
    V = ones(n, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:11) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = array(eval(input("insira n nigga:")))

V = ones(n, dtype = int)

print(vo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:15:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = array(eval(input("insira n nigga:")))

vo = ones(n, dtype = int)

print(vo)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:15:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = array(eval(input("insira n nigga:")))

vo = ones(n, dtype = int)

print(vo)


-- EXECUTION TIME:
0.458911
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:45:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
n = int(input("insira o numero:"))
 
v = ones(n,dtype=int)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v = ones(n,dtype=int)
NameError: name 'ones' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:45:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = int(input("insira o numero:"))
 
v = ones(n,dtype=int)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:45:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n = int(input("insira o numero:"))
 
v = ones(n,dtype=int)

print(v)
-- EXECUTION TIME:
0.455943
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
